# python_project

./: .env  .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml
_others_/diagrams2/: data_classes.puml  main_timing_sequence.puml  solver.puml
data/final/: models_metrics.csv  predictions.csv
data/procesed/: test.csv  train.csv
data/raw/: titanic.db
docs/: demo.md  demo.puml  description.md  index.md  python_diagrams.py  to_do.md
docs/diagrams/: solver.puml
docs/diagrams2/: chung2019.puml  cli.puml  data_classes.puml  main_sequence.puml  main_timing_sequence.puml  rest.puml  solver.puml
docs/general/: data.md  docs.md  intro.md  models.md  pipeline.md  src.md  tests.md  tips.md
docs/project/: description.md  experiment_01.ipynb  intro.md  result_02.ipynb  result_03.ipynb  tips.md  working.md
general/data/: index.html
general/docs/: index.html
general/intro/: index.html
general/models/: index.html
general/pipeline/: index.html
general/src/: index.html
general/tests/: index.html
general/tips/: index.html
pipeline/: ploomber_pipeline.ipynb
project/description/: index.html
project/experiment_01/: index.html
project/experiment_02/: index.html
project/experiment_03/: index.html
project/intro/: index.html
project/result_01/: index.html
project/result_02/: index.html
project/result_03/: index.html
project/tips/: index.html
python_diagrams/: index.html
search/: search_index.json
src/: constants.py  main.py
to_do/: index.html
(+30 files in other folders)
