[tool.poetry]
name = "src"
version = "0.1.0"
description = "Python Project Baseline (Data Science)"
authors = ["Francisco Alfaro <francisco.alfaro@security.cl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.0"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
scikit-learn = "^1.4.0"
lightgbm = "^4.3.0"
loguru = "^0.7.2"
ploomber = "^0.23.2"
pydantic = "^2.6.1"
pyarrow = "^15.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
pre-commit = "^3.6.1"
mkdocs-material = "^9.5.9"
ruff = "^0.2.1"

